# predator_project

./: .gitignore  CMakeLists.txt  macro.C  pred10_seek0.svg:Zone.Identifier  pred10_seek1.svg:Zone.Identifier  pred10_seek2.svg:Zone.Identifier  pred1_seek0  pred1_seek0.svg:Zone.Identifier  pred1_seek1  pred1_seek1.svg:Zone.Identifier  pred1_seek2  pred1_seek2.svg:Zone.Identifier  pred5_seek0.svg:Zone.Identifier  pred5_seek1.svg:Zone.Identifier  pred5_seek2  pred5_seek2.svg:Zone.Identifier
data/: pred10_seek0  pred10_seek1  pred10_seek2  pred5_seek0  pred5_seek1
data2/: pred10_seek0  pred10_seek1  pred10_seek2  pred1_seek0  pred1_seek1  pred1_seek2  pred5_seek0  pred5_seek1  pred5_seek2
source/: boids.cpp  boids.hpp  boids.test.cpp  flock.cpp  flock.hpp  flock.test.cpp  graphics.cpp  graphics.hpp  main-sfml.cpp  main.cpp  parameters.hpp  parameters.test.cpp  parser-sfml.hpp  parser.hpp  stats.cpp  stats.hpp  stats.test.cpp
